# pyrast

./: LICENSE  README.md  pyproject.toml
example/: cube.py  mesh_from_obj.py
src/pyrast/geometry/: __init__.py  generate.py  math.py  scene.py
src/pyrast/render/: __init__.py  quad_tree.py  rasterizer.py  render.py
src/pyrast/util/: io.py  timer.py
