[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrast"
authors = [
    { name="philgras" }
]
description = "A Numpy based 3D rasterizer"
dependencies = [
    "numpy"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["matplotlib"]

[tool.setuptools.dynamic]
version = {attr = "pyrast.__version__"}

